# -Gemini_RAG

./: .env.example  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  app.py  iniciar_app.bat  pyproject.toml  requirements.txt  test_rag_multimodal_completo.py
Data/: DATABiQ.txt
