[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-multimodal-gemini"
version = "1.0.0"
description = "Aplicación RAG Multimodal con Gemini Embeddings 2 y Chat RAG"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Edwin Quintero Alzate", email = "databiq29@gmail.com"}
]
maintainers = [
    {name = "Edwin Quintero Alzate", email = "databiq29@gmail.com"}
]
keywords = [
    "rag",
    "multimodal",
    "embeddings",
    "gemini",
    "chromadb",
    "streamlit",
    "machine-learning",
    "nlp",
    "python"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "streamlit>=1.30.0",
    "google-genai>=0.1.0",
    "chromadb>=0.4.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.24.0",
    "PyPDF2>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pip-audit>=2.5.0",
]

[project.urls]
Homepage = "https://github.com/Edwin1719/Gemini_Embeddings_2"
Documentation = "https://github.com/Edwin1719/Gemini_Embeddings_2#readme"
Repository = "https://github.com/Edwin1719/Gemini_Embeddings_2.git"
Issues = "https://github.com/Edwin1719/Gemini_Embeddings_2/issues"
LinkedIn = "https://www.linkedin.com/in/edwinquintero0329/"

[project.scripts]
rag-multimodal = "streamlit.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["*.py"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", ".env.example"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "streamlit.*",
    "chromadb.*",
    "google.*",
    "PyPDF2.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=. --cov-report=html"

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "venv",
]
